# opensolid-geometry-hs

./: README.md  opensolid-geometry.cabal
app/: Main.hs
src/OpenSolid/: Axis2d.hs  Axis2d.hs-boot  Direction2d.hs  Direction2d.hs-boot  Point2d.hs  Vector2d.hs
src/OpenSolid/Geometry/: Internal.hs  Types.hs
test/: Spec.hs
