name:                opensolid-geometry
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ianmackenzie/opensolid-geometry-hs#readme
license:             MPL-2.0
license-file:        LICENSE
author:              Ian Mackenzie
maintainer:          ian.e.mackenzie@gmail.com
copyright:           Copyright 2017 by Ian Mackenzie
category:            Geometry
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenSolid.Geometry.Types
                     , OpenSolid.Point2d
                     , OpenSolid.Vector2d
                     , OpenSolid.Direction2d
                     , OpenSolid.Axis2d
  other-modules:       OpenSolid.Geometry.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable opensolid-geometry-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , opensolid-geometry
  default-language:    Haskell2010

test-suite opensolid-geometry-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , opensolid-geometry
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ianmackenzie/opensolid-geometry-hs
